tests/algorithms/x/Pascal/physics/n_body_simulation.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/physics/n_body_simulation.pas
n_body_simulation.pas(73,9) Error: Duplicate identifier "SYSTEM"
n_body_simulation.pas(235,3) Error: Identifier not found "json"
n_body_simulation.pas(238,3) Error: Identifier not found "json"
n_body_simulation.pas(246,3) Error: Identifier not found "json"
n_body_simulation.pas(249,3) Error: Identifier not found "json"
n_body_simulation.pas(264) Fatal: There were 5 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
